Adds digital twins to a mongodb
