# docs/swagger.json
@@ -39,6 +39,34 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete a digital twin based on the given address and port.",
+                "tags": [
+                    "Management"
+                ],
+                "summary": "Delete a digital twin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "address",
+                        "name": "address",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "port ",
+                        "name": "port",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
             }
         }
     },
